# calendari

./: .gitignore  Doxyfile  Makefile.am  README  calsync.py  configure.ac
