AC_INIT(calendari, 0.1)
AC_CONFIG_AUX_DIR(build-aux)
AM_INIT_AUTOMAKE(-Wall -Werror foreign silent-rules color-tests)

PKG_CHECK_MODULES(ICAL, libical)
AC_SUBST(ICAL_CFLAGS)
AC_SUBST(ICAL_LIBS)

PKG_CHECK_MODULES(GTK2, gtk+-2.0)
AC_SUBST(GTK2_CFLAGS)
AC_SUBST(GTK2_LIBS)

PKG_CHECK_MODULES(SQLITE3, sqlite3)
AC_SUBST(SQLITE3_CFLAGS)
AC_SUBST(SQLITE3_LIBS)

PKG_CHECK_MODULES(GMODULE, gmodule-2.0)
AC_SUBST(GMODULE_CFLAGS)
AC_SUBST(GMODULE_LIBS)

AC_PROG_CXX

AC_LANG(C++)

AC_CONFIG_FILES(Makefile)
AC_OUTPUT
